# youtube-companion

./: .gitignore  README.md  REPO_HEALTH.md  app.py  client_secrets.example  requirements.txt  uv_requirements.txt
analytics-intelligence/: README.md  mcp_server.py  requirements.txt  setup.py
analytics-intelligence/core/: intelligence.py  youtube.py
analytics-intelligence/dashboard/: app.py
analytics-intelligence/db/: database.py  models.py
analytics-intelligence/scripts/: seed.py
camera-viewer/: .gitignore  README.md  app.py  camera_roll_cleaner.py  fetch_yt_infoa_via_yt_dlp.py  pyproject.toml
camera-viewer/templates/: index.html
scripts/: capture_showcase.py  capture_ui.py
showcase/: capture_yt.py
upload-assistant/: app.py  pyproject.toml
yt-dashboard/: .env.example  app.py  pyproject.toml  requirements.txt  yt_api.py
