[project]
name = "youtube-upload-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "google-api-python-client>=2.85.0",
    "google-auth>=2.17.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "moviepy>=1.0.3",
    "pillow>=11.3.0",
    "pyaudio>=0.2.11",
    "requests>=2.28.0",
    "speechrecognition>=3.10.0",
    "streamlit>=1.32.0",
]
